<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/layXzoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/butzin"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:height="18dp"
            android:text="@string/plus" />

        <Button
            android:id="@+id/butzout"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:height="18dp"
            android:text="@string/minus" />

        <Button
            android:id="@+id/butone"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:height="18dp"
            android:text="@string/nozoom" />

    </LinearLayout>
 
</RelativeLayout>
    